--- a/index.html
+++ b/index.html
@@ -61,20 +61,76 @@
     <div class="swiper swiper-main-banner">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="container">
-            <h1 class="main-banner__title">
-              Финальная распродажа KIA в кредит! Скидки до 40% на все модели!
-            </h1>
-            <ul class="main-banner__list">
-              <li class="main-banner__list-item">Ставка 4,9%</li>
-              <li class="main-banner__list-item">Первый взнос 0%</li>
-              <li class="main-banner__list-item">
-                3 платежа<br>в подарок
-              </li>
-              <li class="main-banner__list-item">
-                Скидка 70 000 ₽<br>при покупке в кредит
-              </li>
-            </ul>
+          <div class="main-banner__container">
+            <picture>
+              <source srcset="./img/main-banner_mob.webp" media="(max-width: 450px)">
+              <source srcset="./img/main-banner_tablet.webp" media="(max-width: 1023px)">
+              <img src="./img/main-banner_desk.webp" alt="bg" class="main-banner__bg">
+            </picture>
+            <div class="container">
+              <h1 class="main-banner__title">
+                Финальная распродажа KIA в кредит! Скидки <span class="text_bg">до 40%</span> на все модели!
+              </h1>
+              <ul class="main-banner__list">
+                <li class="main-banner__list-item">Ставка 4,9%</li>
+                <li class="main-banner__list-item">Первый взнос 0%</li>
+                <li class="main-banner__list-item">
+                  3 платежа<br>в подарок
+                </li>
+                <li class="main-banner__list-item">
+                  Скидка 70 000 ₽<br>при покупке в кредит
+                </li>
+              </ul>
+              <button class="main-banner__button btn _border _inversion">Получить предложение</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="main-banner__container">
+            <picture>
+              <source srcset="./img/main-banner_mob2.webp" media="(max-width: 450px)">
+              <source srcset="./img/main-banner_tablet2.webp" media="(max-width: 1023px)">
+              <img src="./img/main-banner_desk2.webp" alt="bg" class="main-banner__bg">
+            </picture>
+            <div class="container">
+              <h2 class="main-banner__title">
+                <span class="text_bg">Рассрочка 0%</span> на все модели KIA в наличии!
+              </h2>
+              <ul class="main-banner__list">
+                <li class="main-banner__list-item">Первый взнос от 50%</li>
+                <li class="main-banner__list-item">Гарантия 5 лет</li>
+                <li class="main-banner__list-item">
+                  КАСКО в подарок
+                </li>
+                <li class="main-banner__list-item">
+                  Шумоизоляция в подарок
+                </li>
+              </ul>
+              <button class="main-banner__button btn _border _inversion">Получить предложение</button>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="main-banner__container">
+            <picture>
+              <source srcset="./img/main-banner_mob3.webp" media="(max-width: 450px)">
+              <source srcset="./img/main-banner_tablet3.webp" media="(max-width: 1023px)">
+              <img src="./img/main-banner_desk3.webp" alt="bg" class="main-banner__bg">
+            </picture>
+            <div class="container">
+              <h2 class="main-banner__title">
+                Дополнительная выгода по Trade-in на новую KIA <span class="text_bg">до 300 000 ₽</span>
+              </h2>
+              <ul class="main-banner__list">
+                <li class="main-banner__list-item">Гарантия 5 лет</li>
+                <li class="main-banner__list-item">КАСКО в подарок</li>
+                <li class="main-banner__list-item">Шумоизоляция<br> в подарок</li>
+                <li class="main-banner__list-item">
+                  Оценка до 95%<br> от рыночной стоимости
+                </li>
+              </ul>
+              <button class="main-banner__button btn _border _inversion">Получить предложение</button>
+            </div>
           </div>
         </div>
       </div>
