added equip card mobile

--- a/index.html
+++ b/index.html
@@ -137,6 +137,282 @@
       <div class="swiper-pagination"></div>
     </div>
   </section>
+  <section class="form-timer">
+    <div class="container">
+      <div class="form-timer__container">
+        <div class="form-timer__timer">
+          <span class="form-timer__timer-text">До конца акции осталось:</span>
+          <div class="timer">
+            <div class="time-count__item time-count__days">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">Дней</span>
+            </div>
+            <span class="timer-points">:</span>
+            <div class="time-count__item time-count__hours">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">Часов</span>
+            </div>
+            <span class="timer-points">:</span>
+            <div class="time-count__item time-count__minutes">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">Минут</span>
+            </div>
+            <span class="timer-points">:</span>
+            <div class="time-count__item time-count__seconds">
+              <div class="time-count__val">00</div>
+              <span class="time-count__text">Секунд</span>
+            </div>
+          </div>
+        </div>
+        <form action="" class="form-timer__form">
+          <div class="form-timer__form-flex">
+            <input type="tel" name="phone" class="input form-timer__form-input banner__input" placeholder="+7 (___) ___-__-__" required>
+            <button class="btn bg_red form-timer__form-button">зафиксировать предложение</button>
+          </div>
+          <div class="form-checkbox">
+            <label class="form__checkbox-label" for="main-banner-check">
+              <span class="checkbox">
+                <input class="form__checkbox-check" type="checkbox" id="main-banner-check" checked="" required="">
+                <span class="form-checkbox__custom"></span>
+              </span>
+              <span class="form__checkbox-text">
+                Нажимая кнопку, Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+              </span>
+            </label>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
+  <section class="models">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title">Модельный ряд KIA</h2>
+      </div>
+      <div class="models-names">
+        <ul class="models-list">
+          <li class="models-list__item">
+            <a href="" class="models-list__link">Seltos</a>
+          </li>
+          <li class="models-list__item">
+            <a href="" class="models-list__link">Sportage 2024</a>
+          </li>
+          <li class="models-list__item">
+            <a href="" class="models-list__link">Ceed SW</a>
+          </li>
+          <li class="models-list__item">
+            <a href="" class="models-list__link">K900</a>
+          </li>
+          <li class="models-list__item">
+            <a href="" class="models-list__link">Rio</a>
+          </li>
+          <li class="models-list__item">
+            <a href="" class="models-list__link">Rio</a>
+          </li>
+        </ul>
+        <button class="model-names__button">Показать еще</button>
+      </div>
+    </div>
+    <div class="models-cards">
+      <div class="models-card">
+        <div class="container">
+          <div class="models-card__cont">
+            <div class="models-card__image">
+              <span class="models-card__head">KIA SPORTAGE 2022</span>
+              <div class="models-card__prices desk_hide">
+                <span class="models-card__price-old">2 217 900 руб.</span>
+                <div class="models-card__prices-text _price">
+                  Цена от <span class="color_text">1 217 900 руб.</span>
+                </div>
+                <div class="models-card__prices-text _price-month">
+                  <b>Платеж от 12 307 руб./мес.</b>
+                </div>
+              </div>
+              <div class="models-card__car">
+                <img src="./img/test-model.png" alt="car" class="modesl-card__img js_card__img active">
+                <img src="./img/test-model.png" alt="car" class="modesl-card__img js_card__img">
+                <img src="./img/test-model.png" alt="car" class="modesl-card__img js_card__img">
+              </div>
+            </div>
+            <ul class="models-card__actions mob_hide">
+              <li class="models-card__actions-item">
+                <span>
+                  <img src="./img/mod-ac-1.png" alt="icon" class="models-card__actions-img">
+                </span>
+                <span>Кредит от 4.9%</span>
+              </li>
+              <li class="models-card__actions-item">
+                <span>
+                  <img src="./img/mod-ac-2.png" alt="icon" class="models-card__actions-img">
+                </span>
+                <span>КАСКО в подарок</span>
+              </li>
+              <li class="models-card__actions-item">
+                <span>
+                  <img src="./img/mod-ac-3.png" alt="icon" class="models-card__actions-img">
+                </span>
+                <span>Гарантия 5 лет<br> или 150 000 км</span>
+              </li>
+              <li class="models-card__actions-item">
+                <span>
+                  <img src="./img/mod-ac-4.png" alt="icon" class="models-card__actions-img">
+                </span>
+                <span>3 платежа по кредиту<br> в подарок</span>
+              </li>
+            </ul>
+            <div class="models-card__info">
+              <div class="models-card__colors desk_hide">
+                <div class="colors">
+                  <span class="js_color models-card__color color-active" style="background-color: black;" data-color="1" data-colorname="Black" data-model="1"></span>
+                  <span class="js_color models-card__color" style="background-color: pink;" data-color="1" data-colorname="Pink" data-model="1"></span>
+                  <span class="js_color models-card__color" style="background-color: Red;" data-color="1" data-colorname="Red" data-model="1"></span>
+                </div>
+                <span class="models-card__colors-text">
+                  Цвет: <b class="js_color_name" data-model="1">Black</b>
+                </span>
+              </div>
+              <ul class="models-card__actions desk_hide">
+                <li class="models-card__actions-item">
+                  <span>
+                    <img src="./img/mod-ac-1.png" alt="icon" class="models-card__actions-img">
+                  </span>
+                  <span>Кредит от 4.9%</span>
+                </li>
+                <li class="models-card__actions-item">
+                  <span>
+                    <img src="./img/mod-ac-2.png" alt="icon" class="models-card__actions-img">
+                  </span>
+                  <span>КАСКО в подарок</span>
+                </li>
+                <li class="models-card__actions-item">
+                  <span>
+                    <img src="./img/mod-ac-3.png" alt="icon" class="models-card__actions-img">
+                  </span>
+                  <span>Гарантия 5 лет<br> или 150 000 км</span>
+                </li>
+                <li class="models-card__actions-item">
+                  <span>
+                    <img src="./img/mod-ac-4.png" alt="icon" class="models-card__actions-img">
+                  </span>
+                  <span>3 платежа по кредиту<br> в подарок</span>
+                </li>
+              </ul>
+              <div class="models-card__info-flex">
+                <div class="models-card__prices mob_hide">
+                  <span class="models-card__price-old">2 217 900 руб.</span>
+                  <div class="models-card__prices-text _price">
+                    Цена от <span class="color_text">1 217 900 руб.</span>
+                  </div>
+                  <div class="models-card__prices-text _price-month">
+                    <b>Платеж от 12 307 руб./мес.</b>
+                  </div>
+                </div>
+                <div class="models-card__btns">
+                  <button class="btn bg_red models-card__button">Получить предложение</button>
+                  <button class="btn _border models-card__button">Рассчитать кредит</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="equips">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title">Комплектации</h2>
+      </div>
+      <div class="equips-list">
+        <div class="equips-card">
+          <div class="equips-card__info">
+            <div class="equips-card__texts">
+              <div class="equips-card__texts-flex">
+                <span class="equips-card__model">KIA SPORTAGE 2022</span>
+                <div class="equips-card__texts-number desk_hide">
+                  <span>в наличии</span><br>
+                  <span class="equips-card__texts-decor">19 авто</span>
+                </div>
+              </div>
+              <div class="equips-card__texts-flex">
+                <span class="equips-card__name">2.0 AT, 4WD, Prestige</span>
+                <div class="equips-card__texts-number mob_hide">
+                  <span>в наличии</span><br>
+                  <span class="equips-card__texts-decor">19 авто</span>
+                </div>
+              </div>
+              <div class="equips-card__prices desk_hide">
+                <span class="equips-card__price-old">2 217 900 руб.</span>
+                <span class="equips-card__price">Цена от 1 217 900 руб.</span>
+                <span class="equips-card__price-month">Платеж от 12 307 руб./мес. в кредит</span>
+              </div>
+            </div>
+            <ul class="equips-card__actions mob_hide">
+              <li class="equips-card__actions-item">
+                <span>
+                  <img src="./img/eq-ac-1.png" alt="icon" class="equips-card__actions-img">
+                </span>
+                <span>Полный (4WD)</span>
+              </li>
+              <li class="equips-card__actions-item">
+                <span>
+                  <img src="./img/eq-ac-2.png" alt="icon" class="equips-card__actions-img">
+                </span>
+                <span>АКПП 8</span>
+              </li>
+              <li class="equips-card__actions-item">
+                <span>
+                  <img src="./img/eq-ac-3.png" alt="icon" class="equips-card__actions-img">
+                </span>
+                <span>Бензин АИ-95</span>
+              </li>
+              <li class="equips-card__actions-item">
+                <span>
+                  <img src="./img/eq-ac-4.png" alt="icon" class="equips-card__actions-img">
+                </span>
+                <span>238 л.с.</span>
+              </li>
+            </ul>
+          </div>
+          <div class="equips-card__image">
+            <img src="./img/test-equip.png" alt="car" class="equips-card__img">
+          </div>
+          <ul class="equips-card__actions desk_hide">
+            <li class="equips-card__actions-item">
+              <span>
+                <img src="./img/eq-ac-1.png" alt="icon" class="equips-card__actions-img">
+              </span>
+              <span>Полный (4WD)</span>
+            </li>
+            <li class="equips-card__actions-item">
+              <span>
+                <img src="./img/eq-ac-2.png" alt="icon" class="equips-card__actions-img">
+              </span>
+              <span>АКПП 8</span>
+            </li>
+            <li class="equips-card__actions-item">
+              <span>
+                <img src="./img/eq-ac-3.png" alt="icon" class="equips-card__actions-img">
+              </span>
+              <span>Бензин АИ-95</span>
+            </li>
+            <li class="equips-card__actions-item">
+              <span>
+                <img src="./img/eq-ac-4.png" alt="icon" class="equips-card__actions-img">
+              </span>
+              <span>238 л.с.</span>
+            </li>
+          </ul>
+          <div class="">
+            <div class="equips-card__btns">
+              <button class="btn bg_red equips-card__button">Получить предложение</button>
+              <button class="btn _border equips-card__button">Рассчитать кредит</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./libs/jquery.min.js"></script>
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
