--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
                   </div>
                 </div>
                 <div class="models-card__btns">
-                  <button class="btn bg_red models-card__button">Получить предложение</button>
-                  <button class="btn _border models-card__button">Рассчитать кредит</button>
+                  <button class="btn bg_red models-card__button" data-fancybox data-src="#modalRequest">Получить предложение</button>
+                  <button class="btn _border models-card__button" data-fancybox data-src="#modalCredit">Рассчитать кредит</button>
                 </div>
               </div>
             </div>
@@ -426,6 +426,11 @@
             </li>
           </ul>
           <div class="">
+            <div class="equips-card__prices mob_hide">
+              <span class="equips-card__price-old">2 217 900 руб.</span>
+              <span class="equips-card__price">Цена от 1 217 900 руб.</span>
+              <span class="equips-card__price-month">Платеж от 12 307 руб./мес. в кредит</span>
+            </div>
             <div class="equips-card__btns">
               <button class="btn bg_red equips-card__button">Получить предложение</button>
               <button class="btn _border equips-card__button">Рассчитать кредит</button>
@@ -435,6 +440,226 @@
       </div>
     </div>
   </section>
+  <section class="credits banner">
+    <div class="credits__mob banner__mob">
+      <div class="container">
+        <div class="banner__mob-container">
+          <h2 class="banner__title credits__title">Выгодный кредит 4,9%</h2>
+        </div>
+      </div>
+      <img class="banner__mob-img" src="./img/credits_mob.webp" alt="credits">
+    </div>
+    <div class="banner__bg credits__bg">
+      <div class="container">
+        <div class="banner__container">
+          <h2 class="banner__title credits__title mob_hide">Выгодный кредит 4,9%</h2>
+          <ul class="banner-list credits-list">
+            <li class="banner-list__item">
+              <span>Без первоначального взноса</span>
+            </li>
+            <li class="banner-list__item">
+              <span>Скидка 70 000 ₽ на покупку в кредит</span>
+            </li>
+            <li class="banner-list__item">
+              <span>Оформление КАСКО не требуется</span>
+            </li>
+            <li class="banner-list__item">
+              <span>2 документа при оформлении</span>
+            </li>
+          </ul>
+          <form action="" class="banner__form credit__form">
+            <div class="banner__form-container">
+              <input type="tel" class="banner__form-input input banner__input" placeholder="+7 (___) ___-__-__" required name="phone">
+              <button class="banner__button btn bg_red">Рассчитать кредит</button>
+            </div>
+            <div class="form-checkbox">
+              <label class="form__checkbox-label" for="credits-banner-check">
+                <span class="checkbox">
+                  <input class="form__checkbox-check" type="checkbox" id="credits-banner-check" checked="" required="">
+                  <span class="form-checkbox__custom"></span>
+                </span>
+                <span class="form__checkbox-text">
+                  Нажимая кнопку, Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+                </span>
+              </label>
+            </div>
+          </form>
+        </div>
+      </div>
+      <img class="banner__mob-img mob_hide" src="./img/credits_desk.webp" alt="credits">
+    </div>
+  </section>
+  <section class="trade banner">
+    <div class="trade__mob banner__mob">
+      <div class="container">
+        <div class="banner__mob-container">
+          <h2 class="banner__title trade__title">новая kia в trade-in<br> с выгодой до 300 000 ₽</h2>
+        </div>
+      </div>
+      <img class="banner__mob-img" src="./img/trade_mob.webp" alt="trade">
+    </div>
+    <div class="banner__bg trade__bg">
+      <div class="container">
+        <div class="banner__container">
+          <h2 class="banner__title trade__title mob_hide">новая kia в trade-in<br> с выгодой до 300 000 ₽</h2>
+          <ul class="banner-list trade-list">
+            <li class="banner-list__item">
+              <span>
+                <span class="banner__ball">
+                  1
+                </span>
+              </span>
+              <span>Сдаете Ваш старый автомобиль</span>
+            </li>
+            <li class="banner-list__item">
+              <span>
+                <span class="banner__ball">
+                  2
+                </span>
+              </span>
+              <span>Мы проводим бесплатную оценку</span>
+            </li>
+            <li class="banner-list__item">
+              <span>
+                <span class="banner__ball">
+                  3
+                </span>
+              </span>
+              <span>При необходимости<br> доплачиваете разницу</span>
+            </li>
+            <li class="banner-list__item">
+              <span>
+                <span class="banner__ball">
+                  4
+                </span>
+              </span>
+              <span>Уезжаете на новом автомобиле</span>
+            </li>
+          </ul>
+          <form action="" class="banner__form trade__form">
+            <div class="banner__form-container">
+              <input type="tel" class="banner__form-input input banner__input" placeholder="+7 (___) ___-__-__" required name="phone">
+              <button class="banner__button btn bg_red">получить предложение</button>
+            </div>
+            <div class="form-checkbox">
+              <label class="form__checkbox-label" for="trade-banner-check">
+                <span class="checkbox">
+                  <input class="form__checkbox-check" type="checkbox" id="trade-banner-check" checked="" required="">
+                  <span class="form-checkbox__custom"></span>
+                </span>
+                <span class="form__checkbox-text">
+                  Нажимая кнопку, Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+                </span>
+              </label>
+            </div>
+          </form>
+        </div>
+      </div>
+      <img class="banner__mob-img mob_hide" src="./img/trade_desk.webp" alt="trade">
+    </div>
+  </section>
+  <section class="contacts">
+    <img class="contacts__img desk_hide" src="./img/map_mob.webp" alt="map">
+    <div class="contacts__bg">
+      <div class="container">
+        <div class="contacts__container">
+          <h2 class="contacts__title">Контакты</h2>
+          <img src="./img/logo.svg" alt="logo" class="contacts__img-logo">
+          <ul class="contacts__list">
+            <li class="contacts__list-item">
+              <a href="tel:+7 495 111 11 11" class="contacts__list-item">
+                <img src="./img/con-1.svg" alt="icon">
+                <span>+7 495 111 11 11</span>
+              </a>
+            </li>
+            <li class="contacts__list-item">
+              <img src="./img/con-2.svg" alt="icon">
+              <span>
+                27км МКАД, д. Ближние<br> прудищи, вл.1, стр.1
+              </span>
+            </li>
+            <li class="contacts__list-item">
+              <img src="./img/con-3.svg" alt="icon">
+              <span>с 8:00 до 21:00</span>
+            </li>
+          </ul>
+          <button class="btn _border _inversion contacts__button">обратный звонок</button>
+        </div>
+      </div>
+      <img class="contacts__img mob_hide" src="./img/map_desk.webp" alt="map">
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__container">
+        <div class="footer__links">
+          <a href="" class="footer__text">Условия кредитования</a>
+          <a href="" class="footer__text">Пользовательское соглашение</a>
+          <a href="" class="footer__text">Политика конфиденциальности</a>
+        </div>
+        <div class="footer__info">
+          <p class="footer__text">
+            Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="popup" id="modalCredit">
+    <div class="popup__container">
+      <span class="popup__head">Экспресс-кредит<br> под 4,9%</span>
+      <ul class="popup-list">
+        <li class="popup-list__item"><b>Льготная ставка</b> на весь срок</li>
+        <li class="popup-list__item">3 платежа <b>за наш счет</b></li>
+        <li class="popup-list__item">Без первоначального <b>взноса</b></li>
+        <li class="popup-list__item">Досрочное погашение <b>без штрафов</b></li>
+      </ul>
+      <form action="" class="popup-form">
+        <div class="popup-form__container">
+          <input type="tel" class="input popup-form__input" placeholder="Ваш телефон" required name="phone">
+          <button class="btn bg_red popup-form__button">Рассчитать кредит</button>
+        </div>
+        <div class="form-checkbox">
+          <label class="form__checkbox-label" for="modal-credit-check">
+            <span class="checkbox">
+              <input class="form__checkbox-check" type="checkbox" id="modal-credit-check" checked="" required="">
+              <span class="form-checkbox__custom"></span>
+            </span>
+            <span class="form__checkbox-text">
+              Нажимая кнопку, Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="popup" id="modalRequest">
+    <div class="popup__container">
+      <span class="popup__head">Оставьте заявку,<br> и получите безупречное<br> предложение!</span>
+      <ul class="popup-list">
+        <li class="popup-list__item"><b>Выгода до 400 000 ₽</b> на все модели</li>
+        <li class="popup-list__item">Выгодные кредитные условия <b>без первого взноса</b></li>
+        <li class="popup-list__item">Комплект зимней резины <b>в подарок</b></li>
+      </ul>
+      <form action="" class="popup-form">
+        <div class="popup-form__container">
+          <input type="tel" class="input popup-form__input" placeholder="Ваш телефон" required name="phone">
+          <button class="btn bg_red popup-form__button">Получить предложение</button>
+        </div>
+        <div class="form-checkbox">
+          <label class="form__checkbox-label" for="modal-req-check">
+            <span class="checkbox">
+              <input class="form__checkbox-check" type="checkbox" id="modal-req-check" checked="" required="">
+              <span class="form-checkbox__custom"></span>
+            </span>
+            <span class="form__checkbox-text">
+              Нажимая кнопку, Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </div>
   <script src="./libs/jquery.min.js"></script>
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
